--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -45,7 +45,7 @@
         label="Sign in"
         aria-label="Sign In"
         icon="pi pi-user"
-        class="mr-3"></button>
+        class="mr-3 p-button-outlined"></button>
 
       <button
         pButton
