fixed components naming

--- a/src/app/components/pricing/pricing.component.html
+++ b/src/app/components/pricing/pricing.component.html
@@ -180,6 +180,6 @@
   </div>
 </div>
 
-<booking-panel
+<room-booking-form
   (cancel)="showBookPanel = false"
   [showBookPanel]="showBookPanel" />
