added styling and structural changes

--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -41,7 +41,7 @@
       <button
         pButton
         pRipple
-        [routerLink]="['authorize']"
+        routerLink="/authorize"
         label="Sign in"
         aria-label="Sign In"
         icon="pi pi-user"
@@ -50,7 +50,7 @@
       <button
         pButton
         pRipple
-        [routerLink]="['authorize']"
+        routerLink="/authorize"
         label="Sign out"
         aria-label="Sign out"
         icon="pi pi-user-plus"></button>
