--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,17 +1,21 @@
-<!-- <div class="container-fluid text-center my-5">
-  <div class="p-d-flex p-ai-center p-jc-center">
-    <div
-      class="p-card p-shadow-24 p-p-4"
-      style="max-width: 600px; width: 100%">
-      <h1 class="p-text-center font-bold text-6xl font-bold">404</h1>
-      <h2 class="p-text-center mb-4">Page Not Found</h2>
-      <p class="text-muted">Oops! The page you are looking for might have been moved or deleted.</p>
-      <button
-        pButton
-        pRipple
-        [routerLink]="['home']"
-        label="Back to home page"
-        aria-label="Back to home page"></button>
+<div class="container-full">
+  <div class="text-center my-5">
+    <div class="p-d-flex p-ai-center p-jc-center">
+      <div
+        class="p-card p-shadow-24 p-p-4"
+        style="max-width: 600px; width: 100%">
+        <h1 class="p-text-center font-bold text-6xl font-bold">404</h1>
+        <h2 class="p-text-center mb-4">Page Not Found</h2>
+        <p class="text-muted">
+          Oops! The page you are looking for might have been moved or deleted.
+        </p>
+        <button
+          pButton
+          pRipple
+          routerLink="/home"
+          label="Back to home page"
+          aria-label="Back to home page"></button>
+      </div>
     </div>
   </div>
-</div> -->
+</div>
