fixed routing issues

--- a/src/app/pages/auth/auth.component.html
+++ b/src/app/pages/auth/auth.component.html
@@ -56,7 +56,7 @@
       <button
         pButton
         pRipple
-        routerLink="/home"
+        routerLink=""
         label="Sign In"
         aria-label="Sign In"
         icon="pi pi-user"
