--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -12,7 +12,7 @@
         <button
           pButton
           pRipple
-          routerLink="/home"
+          routerLink=""
           label="Back to home page"
           aria-label="Back to home page"></button>
       </div>
