Added scroll to top button

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 @use 'app/styles/base' as *;
-@use 'app/styles/layout' as *;
+@use 'app/styles/components' as *;
 @use 'app/styles/font' as *;
-@use 'app/styles/validation' as *;
+@use 'app/styles/layout' as *;
 
 @import 'primeicons/primeicons.css';
 @import 'primeflex/primeflex.css';
