Change style fonts path

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 @use 'app/styles/base' as *;
-@use 'app/styles/font' as *;
+@use 'app/styles/fonts' as *;
 @use 'app/styles/validation' as *;
 
 @import 'primeicons/primeicons.css';
