--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,30 @@
 @use 'app/styles/base' as *;
-@use 'app/styles/fonts' as *;
+@use 'app/styles/font' as *;
 @use 'app/styles/validation' as *;
 
 @import 'primeicons/primeicons.css';
 @import 'primeflex/primeflex.css';
+
+@font-face {
+    font-family: 'Roboto';
+    src: url('/assets/fonts/Roboto/Roboto-regular.woff2') format('woff2'),
+         url('/assets/fonts/Roboto/Roboto-regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+  }
+  
+  @font-face {
+    font-family: 'Roboto';
+    src: url('/assets/fonts/Roboto/Roboto-italic.woff2') format('woff2'),
+         url('/assets/fonts/Roboto/Roboto-italic.woff') format('woff');
+    font-weight: normal;
+    font-style: italic;
+  }
+  
+  @font-face {
+    font-family: 'Roboto';
+    src: url('/assets/fonts/Roboto/Roboto-bold.woff2') format('woff2'),
+         url('/assets/fonts/Roboto/Roboto-bold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+  }
