Added image usage refactor

--- a/src/app/components/feature/nav-bar/nav-bar.component.html
+++ b/src/app/components/feature/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
 <p-menubar [model]="items">
   <ng-template #start>
-    <img
+    <p-image
       src="assets/images/joystick.png"
       alt="game pad logo" />
   </ng-template>
