--- a/src/app/components/ui/hero/hero.component.html
+++ b/src/app/components/ui/hero/hero.component.html
@@ -36,11 +36,10 @@
       </section>
     </div>
     <div class="col-12 md:col-6 overflow-hidden">
-      <img
+      <p-image
         src="assets/images/hero.jpg"
         alt="Image"
-        class="md:ml-auto block md:h-full"
-        style="clip-path: polygon(8% 0, 100% 0%, 100% 100%, 0 100%)" />
+        class="md:ml-auto block md:h-full hero-image" />
     </div>
   </div>
 </div>
