--- a/src/app/pages/auth/auth.component.html
+++ b/src/app/pages/auth/auth.component.html
@@ -1,7 +1,7 @@
 <div class="container-full">
   <div class="surface-card p-4 shadow-2 border-round w-full lg:w-6">
     <div class="text-center mb-5">
-      <img
+      <p-image
         src="assets/images/joystick.png"
         alt="Game bar logo image"
         height="100"
