--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -40,7 +40,7 @@
     </div>
     <div
       class="col-12 md:col-6 p-6 text-center md:text-left flex align-items-center justify-content-center">
-      <p-image
+      <img
         src="assets/images/about1.jpg"
         alt="Image"
         width="450" />
@@ -50,7 +50,7 @@
   <div class="grid grid-nogutter surface-section text-800">
     <div
       class="col-12 md:col-6 p-6 text-center md:text-left flex align-items-center justify-content-center">
-      <p-image
+      <img
         src="assets/images/about2.jpg"
         alt="Image"
         width="450" />
