install and configure eslint + fix issues

--- a/src/app/components/feature/language-switcher/language-switcher.component.html
+++ b/src/app/components/feature/language-switcher/language-switcher.component.html
@@ -1,6 +1,5 @@
 <p-selectbutton
-  (onOptionClick)="switchLanguage('pl')"
-  [options]="stateOptions"
+  [options]="languageOptions"
   formControlName="value"
   optionLabel="label"
   optionValue="value" />
